--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="ecv/baitcheck: A nextflow pipeline that does an in silico simulation of the baits binding to reference genomes">
+  <meta name="description" content="ecv/baitcheck: A nextflow pipeline to run an in silico simulation of baits mapping to references">
   <title>ecv/baitcheck Pipeline Report</title>
 </head>
 <body>
